# ideafast-etl

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cli.py  dev.env  docker-compose.yaml  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
dags/: dreem.py  dummy_dag.py  monitoring.py  wildkeys.py
ideafast_etl/: .airflowignore
ideafast_etl/dags/: dreem.py  dummy_mongo_dag.py  example_mongo_dag.py
ideafast_etl/etl_utils/: db.py  ucam.py
ideafast_etl/etl_utils/hooks/: db.py  dmp.py  drm.py  jwt.py  ucam.py
ideafast_etl/etl_utils/operators/: ucam.py
ideafast_etl/hooks/: db.py  db_monitoring.py  dmp.py  drm.py  jwt.py  ucam.py  wks.py
ideafast_etl/operators/: ucam.py
ideafast_etl/utils/: cli.py
init/: connections.yaml.example  pools.json
tests/: conftest.py  test_cli.py  test_example_mongo_dag.py  test_ideafast_etl.py  test_operators.py
tests/cli/: test_cli.py
tests/dags/: conftest.py  test_dreem_dag.py  test_dummy_dag.py
tests/hooks/: conftest.py  test_db.py  test_dmp.py  test_drm.py  test_jwt.py  test_ucam_hook.py  test_wks.py
tests/operators/: conftest.py  test_ucam_operator.py
