[tool.poetry]
name = "ideafast-etl"
version = "0.1.2"
description = ""
authors = ["David <davidverweij@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
black = "^21.9b0"
flake8 = "^4.0.1"
flake8-aaa = "^0.12.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.9.2"
isort = "^5.9.3"
mypy = "^0.910"
click = "^8.0.3"
apache-airflow = "^2.2.0"

[tool.poetry.scripts]
build = "cli:build"
version = "cli:version"
bump = "cli:bump"
publish = "cli:publish"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"